--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
     <body>
         <header>
-            <img src="/media/nez.png" alt="logo">
+            <img src="/media/logo.webp" alt="logo">
             <h1>LuTap</h1>
         </header>
         <main>
@@ -22,18 +22,20 @@
                 <h2>Tap Dance Is The Language Of Diversity. <br>
                     The Way You Walk Says It All.
                 </h2>
-                <div class="sub">
-                    <h3>Open tap class starting soon.</h3>
+                
+            </div>
+            <div class="sub">
+                    <h3>Open tap dance class starting soon.</h3>
                     <h4>Tap seminar, live jam sessions and workshops.</h4>
-                </div>
                 <form action="">
-                    <input class="email" type="email" placeholder="example@email.com"> <br>
+                    <input class="email" type="email" placeholder="example@email.com">
                     <input class="submit" type="submit" value="Subscribe">
+                 <button class="redirect"> Go to website</button>
                 </form>
             </div>
             <div class="background">
                 <div class="filter"></div>
-                <img src="/media/267021.jpg" alt="" width="100%">
+                <img src="/media/background.webp" alt="" width="100%">
             </div>
         </main>
     </body>
